# Sova

./: .gitignore  Cargo.toml  README.md  convert.md
.github/workflows/: build-release.yml
bubocore/: Cargo.toml
bubocore-ratatui/: Cargo.toml
bubocore-ratatui/src/: app.rs  components.rs  main.rs  ui.rs
bubocore/examples/: bali_test_prog.rs  dummy_client.rs  play_aftertouch.rs  play_channelpressure.rs  play_clock.rs  play_control.rs  play_note.rs  play_program_change.rs  play_start_stop_reset_continue.rs  replacing_scripts.rs
bubocore/src/: clock.rs  device_map.rs  lib.rs  main.rs  protocol.rs  schedule.rs  server.rs  shared_types.rs  world.rs
bubocoretui/: Cargo.toml
bubocoretui/src/: app.rs  commands.rs  components.rs  disk.rs  event.rs  main.rs  network.rs  ui.rs
core/: Cargo.toml
core/deprecated_examples/: bali_test_prog.rs  dummy_client.rs
core/examples/: embedded_logging.rs  standalone_logging.rs
core/src/: clock.rs  compiler.rs  device_map.rs  lang.rs  lib.rs  logger.rs  main.rs  relay_client.rs  scene.rs  schedule.rs  server.rs  transcoder.rs  vm.rs  world.rs
engine/: Cargo.toml
engine/src/: engine.rs  lib.rs  main.rs  (+7 more)
examples/: bali_test_prog.rs
gui/: package.json  pnpm-lock.yaml
relay/: Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.prebuilt  README.md  docker-compose.yml
solo-tui/: Cargo.toml  LICENSE  README.md
src/: clock.rs  device_map.rs  dummyast.rs  io.rs  lang.rs  main.rs  pattern.rs  protocol.rs  schedule.rs  server.rs
website/: README.md  _coverpage.md  _sidebar.md  ayu-dark.css  community.md  hugo.toml  index.html
(+747 files in other folders)
